[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests"]

[project]
name="modelskill"
version="1.1.0"
dependencies = [
    "numpy  > 1.24.4",
    "pandas >= 1.4",
    "mikeio >= 1.2",
    "matplotlib",
    "xarray",
    "netCDF4",
    "scipy",
    "jinja2",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
]

authors = [
  { name="Jesper Sandvig Mariegaard", email="jem@dhigroup.com" },
  { name="Henrik Andersson", email="jan@dhigroup.com" },
]
description="Compare results from simulations with observations."
license="MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest",
        "mkdocs==1.6.0",
        "mkdocs-material==9.5.32",
        "mkdocstrings==0.25.2",
        "mkdocstrings-python==1.10.8",
        "plotly >= 4.5",
        "ruff==0.6.2",]

test =  [
            "pytest",
            "pytest-cov", 
            "openpyxl",
            "dask",
            "mypy",
            "types-PyYAML",
            "geopandas",
        ]

notebooks = [
            "nbformat",
            "nbconvert",
            "jupyter",
            "plotly",
            "shapely",
            "seaborn",
        ]

[project.urls]
"Homepage" = "https://github.com/DHI/modelskill"
"Bug Tracker" = "https://github.com/DHI/modelskill/issues"


[tool.ruff]
# ignore line too long
lint.ignore  = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
