[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["**/.mypy_cache**", "**/.mypy_cache/**"]
wheel-exclude = ["**/.mypy_cache**","**/.mypy_cache/**"]

[project]
name = "modelskill"
version = "1.3.0"
dependencies = [
    "numpy  > 1.24.4",
    "pandas >= 1.4",
    "mikeio >= 1.2",
    "matplotlib",
    "xarray",
    "netCDF4",
    "scipy",
    "jinja2", # used for skill.style
]

authors = [
    { name = "Jesper Sandvig Mariegaard", email = "jem@dhigroup.com" },
    { name = "Henrik Andersson", email = "jan@dhigroup.com" },
]
description = "Compare results from simulations with observations."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[dependency-groups]
dev = [
    "pytest",
    "plotly >= 4.5",
    "ruff==0.6.2",
    "quarto-cli==1.5.57",
    "quartodoc==0.11.1",
    "netCDF4",
    "dask",
]

test = [
    "pytest",
    "pytest-cov",
    "openpyxl",
    "dask",
    "mypy==1.16.1",
    "types-PyYAML",
    "geopandas",
]

notebooks = ["nbformat", "nbconvert", "jupyter", "plotly", "shapely", "seaborn"]

[project.urls]
"Homepage" = "https://github.com/DHI/modelskill"
"Bug Tracker" = "https://github.com/DHI/modelskill/issues"


[tool.ruff.lint]
ignore = ["E501"]
select = ["E4", "E7", "E9", "F", "D200", "D205"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true


[[tool.mypy.overrides]]
module = "modelskill.metrics"
ignore_errors = true
